--- a/bitcoin-labels/docker-compose.yml
+++ b/bitcoin-labels/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.7"
 
 services:
   web:
-    image: abhishandy/bitcoin-labels:v0.2.1
+    image: abhishandy/bitcoin-labels:v0.2.3
     restart: on-failure
     stop_grace_period: 1m
     ports:
-      - $APP_BITCOIN_LABELS_PORT:$APP_BITCOIN_LABELS_PORT
+      - $APP_BITCOIN_LABELS_PORT:3000
