--- a/bitcoin-labels/umbrel-app.yml
+++ b/bitcoin-labels/umbrel-app.yml
@@ -2,12 +2,16 @@ manifestVersion: 1
 id: bitcoin-labels
 category: Accounting
 name: Bitcoin Labels
-version: "0.2.1"
+version: "0.2.3"
 tagline: Privately label your Bitcoin transactions.
 description: >-
+  An open-source project to privately label your Bitcoin transactions.
+  Features:
+    - Generate bc1 addresses from a zpub till a given depth (v0.1)
+    - Check status and balance of the associated addresses using a trusted mempool.space instance (v0.2)
 releaseNotes: >-
 developer: Abhishek Shandilya
-website: https://bit-table.vercel.app
+website: https://bitcoin-labels.vercel.app/
 dependencies:
   - mempool
 repo: https://github.com/abhiShandy/bitcoin-labels
