Update squeak road app to v0.1.11

--- a/squeakroad/umbrel-app.yml
+++ b/squeakroad/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: squeakroad
 category: Finance
 name: Squeak Road
-version: "0.1.9"
+version: "0.1.11"
 tagline: Run your own anonymous market
 description: >-
   Squeak Road lets you run an anonymous market where anyone can buy or sell anything.
@@ -28,3 +28,6 @@ gallery:
 path: ""
 defaultUsername: "umbrel"
 deterministicPassword: true
+releaseNotes: >-
+  - Show better error message on failed user signup validation.
+  - Don't fetch font assets from remote CDN.
