Jam: add release notes

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -12,6 +12,16 @@ description: >-
 
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
+releaseNotes: >-
+  - In-app Orderbook
+
+  - Improved Earn Report
+
+  - Address-reuse warnings
+
+  - Human-readable locktime for Fidelity Bonds
+
+  - And, last but not least: the famed UTXO drill-down view
 developer: JoinMarket WebUI Organisation
 website: https://github.com/joinmarket-webui
 dependencies:
