Jam: update links

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -23,11 +23,11 @@ releaseNotes: >-
 
   - And, last but not least: the famed UTXO drill-down view
 developer: JoinMarket WebUI Organisation
-website: https://github.com/joinmarket-webui
+website: https://jamdocs.org
 dependencies:
   - bitcoin
-repo: https://github.com/joinmarket-webui/joinmarket-webui
-support: https://github.com/joinmarket-webui/joinmarket-webui/issues
+repo: https://github.com/joinmarket-webui/jam
+support: https://github.com/joinmarket-webui/jam/issues
 port: 5002
 gallery:
   - 1.jpg
