Upgrade ItchySats to `0.5.4`

--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: itchysats
 category: Finance
 name: ItchySats
-version: "0.5.0-patch-1"
+version: "0.5.4"
 tagline: Peer-2-peer derivatives on Bitcoin
 description: >-
   ItchySats enables peer-2-peer CFD trading on Bitcoin using DLCs
@@ -58,4 +58,6 @@ defaultUsername: itchysats
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  Minor patch for the app's Umbrel configuration. No changes to the application container.
+  This release is deprecating the remaining old network protocols.
+  The old network protocol stack will be removed with the next release.
+  Please upgrade to keep compatibility.
