Shorten twitter url

--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -44,6 +44,6 @@ releaseNotes: >-
   - Ticket Tailor plugin to sell tickets
   - LNBank updates
 
-  More details: https://twitter.com/BtcpayServer/status/1545444707169636353?s=20&t=9Ri9Jsz2r8E1AtFtJF_Csw
+  More details: https://twitter.com/BtcpayServer/status/1545444707169636353
 
   Other included updates (1.6.1-1.6.3): Minor improvements and bug fixes and ability to add a discount in the point of sale keypad!
