--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -38,3 +38,25 @@ path: ""
 defaultUsername: umbrel
 deterministicPassword: true
 torOnly: false
+releaseNotes: >
+  - Fix cropped image generated when not asked (server#32483)
+
+  - Fix loading groupfolder info when share api is disabled (server#32654)
+
+  - Validate custom dashboard background image (server#32791)
+
+  - Bump webpack from 5.72.0 to 5.72.1 (server#32819)
+
+  - Update psalm-baseline.xml (server#32824)
+
+  - Fix deletion of additional emails (server#32850)
+
+  - Don’t spam the log with fatals when maintenance mode is enabled or an… (server#32858)
+
+  - Run php tests when 3rdparty changed (server#32870)
+
+  - Make sure ResetTokenBackgroundJob doesn’t execute if config is read-only (server#32882)
+
+  - Fix default toast message for failed uploads with HTTP/2 (server#32894)
+
+  - And many other fixes...
