--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ride-the-lightning
 category: Lightning Node Management
 name: Ride The Lightning
-version: "0.12.1"
+version: "0.12.1-patch-2"
 tagline: A powerful dashboard for the Lightning Network
 description: >-
   RTL is a full function, device agnostic, web user interface to help
@@ -39,6 +39,8 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+releaseNotes: >-
+  This update removes an outdated version of Loop that could lead to loss of funds. If you still wish to use Loop you can use the latest version in the Lightning Terminal app.
 path: ""
 defaultUsername: ""
 deterministicPassword: true
