Update bitcoind to v23

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -33,3 +33,29 @@ gallery:
   - 4.jpg
 path: ""
 defaultPassword: ""
+releaseNotes: >-
+  - P2P and network changes
+
+  - Fee estimation changes
+
+  - Rescan startup parameter removed
+
+  - Tracepoints and Userspace, Statically Defined Tracing support
+
+  - Updated RPCs
+
+  - New RPCs
+
+  - File changes
+
+  - Updated settings
+
+  - Tools and Utilities changes
+
+  - Tools and Utilities changes
+
+  - GUI changes
+
+  - Low-level changes (RPC and tests)
+
+  - Full details here: https://bitcoincore.org/en/releases/23.0/
