Use specific Tor port for Tor connections

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -59,3 +59,5 @@ releaseNotes: >-
   - Low-level changes (RPC and tests)
 
   - Full details here: https://bitcoincore.org/en/releases/23.0/
+
+  - Bugfix: Use specific Tor port with Tor connections
