--- a/passky-client/docker-compose.yml
+++ b/passky-client/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: 'rabbitcompany/passky-web:v7.0.0'
+    image: 'rabbitcompany/passky-web:v7.0.0@sha256:c854b3449804de7701e1479fbb36784c57822b61f02e5235a0ed5598bdcaf95a'
     restart: on-failure
     stop_grace_period: 1m
     networks:
