--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   database:
-    image: 'rabbitcompany/passky-database:v7.0.0'
+    image: 'rabbitcompany/passky-database:v7.0.0@sha256:05f487b0c7080e4fe305069d5d1358127ba6829025e70e88fb768de5b37b25f0'
     restart: on-failure
     stop_grace_period: 1m
     environment:
@@ -25,7 +25,7 @@ services:
         ipv4_address: $APP_PASSKY_DB_IP
 
   api:
-    image: 'rabbitcompany/passky-api:v7.0.0'
+    image: 'rabbitcompany/passky-api:v7.0.0@sha256:49b288bfa1634440f48f908154eb062694c96bed6dc7669095a89e57fc6177e1'
     restart: on-failure
     stop_grace_period: 1m
     environment:
