Fix port conflict for Squeak Road app

--- a/squeakroad/umbrel-app.yml
+++ b/squeakroad/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: squeakroad
 category: Finance
 name: Squeak Road
-version: "0.1.14"
+version: "0.1.14-build-2"
 tagline: Run your own anonymous market
 description: >-
   Squeak Road lets you run an anonymous market where anyone can buy or sell anything.
@@ -20,7 +20,7 @@ dependencies:
   - lightning
 repo: https://github.com/yzernik/squeakroad
 support: https://t.me/squeakroad
-port: 8200
+port: 18200
 gallery:
   - 1.jpg
   - 2.jpg
