--- a/thunderhub/docker-compose.yml
+++ b/thunderhub/docker-compose.yml
@@ -21,18 +21,7 @@ services:
       LOG_LEVEL: "debug"
       ACCOUNT_CONFIG_PATH: "/data/thubConfig.yaml"
       YML_ENV_1: "$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_GRPC_PORT"
-      TOR_PROXY_SERVER: "socks://${APP_ID}.tor:9050"
+      TOR_PROXY_SERVER: "socks://$TOR_PROXY_IP:$TOR_PROXY_PORT"
     networks:
       default:
         ipv4_address: $APP_THUNDERHUB_IP
-  
-  tor:
-    image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
-    user: "1000:1000"
-    restart: on-failure
-    volumes:
-      - ${APP_DATA_DIR}/torrc:/etc/tor/torrc:ro
-      - ${TOR_DATA_DIR}:/data
-    environment:
-      HOME: "/tmp"
-    hostname: "${APP_ID}.tor"
