--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -31,8 +31,8 @@ services:
       SQUEAKNODE_LIGHTNING_LND_MACAROON_PATH: "/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
 
       # Tor environment variables
-      SQUEAKNODE_TOR_PROXY_IP: "${APP_ID}.tor"
-      SQUEAKNODE_TOR_PROXY_PORT: "9050"
+      SQUEAKNODE_TOR_PROXY_IP: "${TOR_PROXY_IP}"
+      SQUEAKNODE_TOR_PROXY_PORT: "${TOR_PROXY_PORT}"
 
       # App specific environment variables
       SQUEAKNODE_WEBADMIN_ENABLED: "true"
