--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -21,10 +21,10 @@ services:
       APP_PASSWORD: "${APP_PASSWORD}"
       jm_tor_control_host: "${APP_ID}.tor"
       jm_tor_control_port: 29051
-      jm_onion_socks5_host: "${APP_ID}.tor"
-      jm_onion_socks5_port: 9050
-      jm_socks5_host: "${APP_ID}.tor"
-      jm_socks5_port: 9050
+      jm_onion_socks5_host: "${TOR_PROXY_IP}"
+      jm_onion_socks5_port: "${TOR_PROXY_PORT}"
+      jm_socks5_host: "${TOR_PROXY_IP}"
+      jm_socks5_port: "${TOR_PROXY_PORT}"
       jm_rpc_host: $APP_BITCOIN_NODE_IP
       jm_rpc_port: $APP_BITCOIN_RPC_PORT
       jm_rpc_user: $APP_BITCOIN_RPC_USER
