--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - "${UMBREL_ROOT}/statuses:/statuses"
     environment:
       PORT: "3006"
-      TOR_PROXY_IP: "${APP_ID}.tor"
-      TOR_PROXY_PORT: "9050"
+      TOR_PROXY_IP: "${TOR_PROXY_IP}"
+      TOR_PROXY_PORT: "${TOR_PROXY_PORT}"
       BITCOIN_HOST: "${APP_BITCOIN_NODE_IP}"
       RPC_PORT: "${APP_BITCOIN_RPC_PORT}"
       RPC_USER: "${APP_BITCOIN_RPC_USER}"
