Revert Core Lightning

--- a/core-lightning/docker-compose.yml
+++ b/core-lightning/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - --bitcoin-rpcconnect=${APP_BITCOIN_NODE_IP}
       - --bitcoin-rpcuser=${APP_BITCOIN_RPC_USER}
       - --bitcoin-rpcpassword=${APP_BITCOIN_RPC_PASS}
-      - --proxy=${APP_ID}.tor:9050
+      - --proxy=${TOR_PROXY_IP}:${TOR_PROXY_PORT}
       - --bind-addr=${APP_CORE_LIGHTNING_DAEMON_IP}:9735
       - --addr=statictor:${APP_ID}.tor:29051
       - --tor-service-password=tortortor
