--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -58,4 +58,4 @@ releaseNotes: >-
 
   - Full details here: https://bitcoincore.org/en/releases/23.0/
 
-  - Bugfix: Use specific Tor port with Tor connections
+  - Bugfix: Use specific Tor port for peers from Tor network
