Update Bitcoin to v23 (#109)
Co-authored-by: kroese <kroese@users.noreply.github.com>

--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: bitcoin
 category: Finance
 name: Bitcoin Node
-version: "22.0-build-2"
+version: "23.0"
 tagline: Run your personal node powered by Bitcoin Core
 description: >-
   Run your Bitcoin node and independently store and validate
@@ -33,3 +33,29 @@ gallery:
   - 4.jpg
 path: ""
 defaultPassword: ""
+releaseNotes: >-
+  - P2P and network changes
+
+  - Fee estimation changes
+
+  - Rescan startup parameter removed
+
+  - Tracepoints and Userspace, Statically Defined Tracing support
+
+  - Updated RPCs
+
+  - New RPCs
+
+  - File changes
+
+  - Updated settings
+
+  - Tools and Utilities changes
+
+  - GUI changes
+
+  - Low-level changes (RPC and tests)
+
+  - Full details here: https://bitcoincore.org/en/releases/23.0/
+
+  - Bugfix: Use specific Tor port for peers from Tor network
