Jam: link to jamapp.org

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -23,7 +23,7 @@ releaseNotes: >-
 
   - And, last but not least: the famed UTXO drill-down view
 developer: JoinMarket WebUI Organisation
-website: https://jamdocs.org
+website: https://jamapp.org
 dependencies:
   - bitcoin
 repo: https://github.com/joinmarket-webui/jam
