Revert "Jam: disable basic auth"
This reverts commit 68779cec536a96636b3393d92a8d9bdec711bc76.

--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       RESTORE_DEFAULT_CONFIG: "true"
       REMOVE_LOCK_FILES: "true"
       ENSURE_WALLET: "true"
+      APP_USER: umbrel
+      APP_PASSWORD: "${APP_PASSWORD}"
       jm_network: $APP_BITCOIN_NETWORK
       jm_rpc_host: $APP_BITCOIN_NODE_IP
       jm_rpc_port: $APP_BITCOIN_RPC_PORT
