Upgrade to LND v0.15.1-beta.rc1

--- a/lightning/docker-compose.yml
+++ b/lightning/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         ipv4_address: $APP_LIGHTNING_IP
   
   lnd:
-    image: lightninglabs/lnd:v0.15.0-beta@sha256:d227a9db0727ff56020c8d6604c8c369757123d238ab6ce679579c2dd0d0d259
+    image: lightninglabs/lnd:v0.15.1-beta.rc1@sha256:ec39abc43927de3c3b40a5477bb98236f8127b8128dc3475c48a4322088324bb
     command: "${APP_LIGHTNING_COMMAND}"
     user: 1000:1000
     restart: on-failure
