--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3002
 
   web:
-    image: bitcoinscala/wallet-server-ui:1.9.2-f44ad4a4-SNAPSHOT@sha256:61d0f156202314cdfe00e184affa72f98c23fa79b8c9f56eed93f5802b0c2f82
+    image: bitcoinscala/wallet-server-ui:1.9.2-1cd65c60-SNAPSHOT
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -30,7 +30,7 @@ services:
       - walletserver
   
   walletserver:
-    image: bitcoinscala/bitcoin-s-server:1.9.2-66-b16a8ca6-SNAPSHOT@sha256:bde3cbb50c4e5e8e4a5f28ae90e84718f093506e4f8ae6e9c3d0894bd7e102f5
+    image: bitcoinscala/bitcoin-s-server:1.9.2-159-1b19872a-SNAPSHOT
     user: "1000:1000"
     restart: on-failure
     volumes:
