Upgrade ItchySats to `0.5.5`

--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: itchysats
 category: Finance
 name: ItchySats
-version: "0.5.4"
+version: "0.5.5"
 tagline: Peer-2-peer derivatives on Bitcoin
 description: >-
   ItchySats enables peer-2-peer CFD trading on Bitcoin using DLCs
@@ -58,6 +58,6 @@ defaultUsername: itchysats
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  This release is deprecating the remaining old network protocols.
-  The old network protocol stack will be removed with the next release.
-  Please upgrade to keep compatibility.
+  This release fixes a rare but critical bug where the state of the application was not updated correctly resulting in unexpectedly force-closing positions.
+  Furthermore, this release improves connection stability.
+  It is recommended to update to this version to ensure position are not unexpectedly force-closed.
