Update Jam to v0.0.10 (#103)

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jam
 category: Finance
 name: Jam
-version: "0.0.9"
+version: "0.0.10"
 tagline: A user-friendly UI for JoinMarket
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -12,12 +12,22 @@ description: >-
 
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
+releaseNotes: >-
+  - In-app Orderbook
+
+  - Improved Earn Report
+
+  - Address-reuse warnings
+
+  - Human-readable locktime for Fidelity Bonds
+
+  - And, last but not least: the famed UTXO drill-down view
 developer: JoinMarket WebUI Organisation
-website: https://github.com/joinmarket-webui
+website: https://jamapp.org
 dependencies:
   - bitcoin
-repo: https://github.com/joinmarket-webui/joinmarket-webui
-support: https://github.com/joinmarket-webui/joinmarket-webui/issues
+repo: https://github.com/joinmarket-webui/jam
+support: https://github.com/joinmarket-webui/jam/issues
 port: 5002
 gallery:
   - 1.jpg
