--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: $APP_KRYSTAL_BULL_IP
       APP_PORT: 3001
   web:
-    image: bitcoinscala/oracle-server-ui:1.9.2-f44ad4a4-SNAPSHOT@sha256:aa128ad3e4134585390127c092bad09d1632055108f459c248048246c1cabab7
+    image: bitcoinscala/oracle-server-ui:1.9.2-1cd65c60-SNAPSHOT
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -26,7 +26,8 @@ services:
     depends_on: 
       - oracleserver
   oracleserver:
-    image: bitcoinscala/bitcoin-s-oracle-server:1.9.2-42-83cff9a4-SNAPSHOT@sha256:bbe1673878fe44e1a1554279e049f24e81a4f771e81928d59d2add236734d350
+    image: bitcoinscala/bitcoin-s-oracle-server:1.9.2-164-2dad9f57-SNAPSHOT
+    entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/home/bitcoin-s/.bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data/oracleserver:/home/bitcoin-s/.bitcoin-s
