--- a/whoogle-search/docker-compose.yml
+++ b/whoogle-search/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     stop_grace_period: 1m
     user: "927:927"
     environment:
-      WHOOGLE_TOR_SERVICE: '1'
+      #WHOOGLE_TOR_SERVICE: '1'
       #WHOOGLE_PROXY_LOC: "socks://$TOR_PROXY_IP:$TOR_PROXY_PORT"
       EXPOSE_PORT: $APP_WHOOGLE_SEARCH_PORT
     networks:
