--- a/libreddit/docker-compose.yml
+++ b/libreddit/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     user: "1000:1000"
+    environment:
+      PORT: $APP_LIBREDDIT_PORT
     networks:
       default:
         ipv4_address: $APP_LIBREDDIT_IP
