Indicate mempool dependency

--- a/thunderhub/umbrel-app.yml
+++ b/thunderhub/umbrel-app.yml
@@ -17,6 +17,7 @@ developer: Anthony Potdevin
 website: https://apotdevin.com
 dependencies:
   - lightning
+  - mempool
 repo: https://github.com/apotdevin/thunderhub
 support: https://t.me/thunderhub
 port: 3000
