--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -21,6 +21,13 @@ description: >-
 
 
   An official app from Umbrel.
+releaseNotes: >-
+  Introducing automatic channel backup recovery. You can now recover your Lightning Node seamlessly when setting up a new node, including the funds in your Bitcoin wallet (on-chain), as well as the funds in your Lightning payment channels.
+
+  Also new:
+  - View your total (on-chain + off-chain) balance
+  - Bitcoin transactions open in local mempool app on your Umbrel (if it's installed)
+  - Support for Atomic Multi-path Payments (AMP)
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
