Update Mempool release notes

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -31,6 +31,8 @@ description: >-
   - Multiple languages support
 
   - JSON APIs
+releaseNotes: >-
+  This update allows the Lightning Node app to open its Bitcoin wallet (on-chain) transactions on your local mempool.
 developer: Mempool Space K.K.
 website: https://mempool.space/about
 dependencies:
