Re-add entrypoint

--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -31,6 +31,7 @@ services:
   
   walletserver:
     image: bitcoinscala/bitcoin-s-server:1.9.2-187-02f525fd-SNAPSHOT
+    entrypoint: ["/opt/docker/bin/bitcoin-s-server", "--datadir", "/home/bitcoin-s/.bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]
     user: "1000:1000"
     restart: on-failure
     volumes:
