--- a/whoogle-search/docker-compose.yml
+++ b/whoogle-search/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   web:
-    image: benbusby/whoogle-search:latest@sha256:5b6922affd5b5d6502d3d3dd91ab3d3c22f31f89af2e67868d5de62631aa4762
+    image: benbusby/whoogle-search:0.7.4@sha256:8526a3272d992ea2c240919b8b5dafee2b37eab28af7df4f175054ef29d8b65d
     restart: on-failure
     stop_grace_period: 1m
     user: "927:927"
