Fix description formatting

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -10,16 +10,26 @@ description: >-
   minimize custody and trust requirements. The deterministically generated robot 
   avatars help users stick to best privacy practices.
   
+
   Features:
 
+
   - Privacy focused: your robot avatar is deterministically generated, no need for registration.
+
   - More than 10 languages available and over 60 fiat currencies
+
   - Safe: simply lock a lightning hodl invoice and show you are real and commited.
+
   - No data collection. Your communication with your peer is PGP encrypted, only you can read it.
+
   - Lightning fast: the average soverign trade finishes in ~ 8 minutes. Faster than a single block confirmation!
+
   - Fully collateralized escrow: your peer is always commited and cannot run away with the funds.
+
   - Strong incentives system: attempts of cheating are penalized with the slashing of the Sats in the fidelity bond.
+
   - Guides and video tutorials available at https://learn.robosats.com/watch.en .
+
 
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
@@ -29,7 +39,7 @@ releaseNotes: >-
   You can now use your WebLN compatible wallet with RoboSats.
 developer: RoboSats
 website: https://learn.robosats.com
-dependencies:
+dependencies: []
 repo: https://github.com/reckless-satoshi/robosats
 support: https://t.me/robosats
 port: 12596
