--- a/robosats/docker-compose.yml
+++ b/robosats/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     image: recksato/robosats-client:7083423@sha256:289f47608f2a325cbd7560d3f43f2bcb16ff57edc492ba65867c81f54d48fb38
     restart: on-failure
     stop_grace_period: 1m
+    init: true
     environment:
       TOR_PROXY_IP: ${TOR_PROXY_IP}
       TOR_PROXY_PORT: ${TOR_PROXY_PORT}
