Use `init: true`

--- a/whoogle-search/docker-compose.yml
+++ b/whoogle-search/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     image: benbusby/whoogle-search:0.7.4@sha256:8526a3272d992ea2c240919b8b5dafee2b37eab28af7df4f175054ef29d8b65d
     restart: on-failure
     stop_grace_period: 1m
+    init: true
     user: "927:927"
     environment:
       EXPOSE_PORT: $APP_WHOOGLE_SEARCH_PORT
