Use `init: true` with database service

--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     image: 'rabbitcompany/passky-database:v7.1.0@sha256:3092a9b88a5a443bbbfe566856a197f336dacfc543e4e4a66df4d2cd5423fa27'
     restart: on-failure
     stop_grace_period: 1m
+    init: true
     environment:
       MYSQL_DATABASE: "passky"
       MYSQL_USER: "passky"
