Add deprecation notice to lightning-shell

--- a/lightning-shell/umbrel-app.yml
+++ b/lightning-shell/umbrel-app.yml
@@ -5,6 +5,9 @@ name: Lightning Shell
 version: "0.1.10-build-1"
 tagline: Web shell with a selection of LN node management utilities
 description: >
+  Deprecation notice: This app has been deprecated and therefore will no longer receive any app updates.
+  
+
   Lightning Shell is a web shell for the Umbrel personal server that
   includes the following utilities:
 
