--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -43,3 +43,23 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  - Feature: add faucet and exfund extensions #1820 (Stepan Snigirev)
+
+  - Feature: Dev tools - Adding full python access via javascript for developers #1842 (relativisticelectron)
+
+  - UIUX: Complete overhaul of the tooltips used in Specter Desktop #1813 (Manolis Mandrapilias)
+
+  - UIUX: Easier adding and deleting of recipients #1782 (relativisticelectron)
+
+  - UIUX: Optimize tx-table for mobile screen #1804 (relativisticelectron)
+
+  - Mobile: Some extra height in mobile browsers #1827 (relativisticelectron)
+
+  - Bugfix: Allow mouse selection during address label editing for Firefox #1825 (relativisticelectron)
+
+  - Bugfix: Another broken html part and b tag #1823 (relativisticelectron)
+
+  - Bugfix: Fiat price in address table not visible #1836 (relativisticelectron)
+
+  - And many other bugfixes...
