--- a/libreddit/docker-compose.yml
+++ b/libreddit/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     image: ceramicwhite/libreddit:latest@sha256:00a133da4ae8eb1b7d3ce9af0ca387e2dd929dc6b490736532b5d998a025c362
     restart: on-failure
     stop_grace_period: 1m
+    init: true
     user: "1000:1000"
     environment:
       PORT: $APP_LIBREDDIT_PORT
