--- a/libreddit/docker-compose.yml
+++ b/libreddit/docker-compose.yml
@@ -11,10 +11,11 @@ services:
     image: ceramicwhite/libreddit:0.22.9@sha256:00a133da4ae8eb1b7d3ce9af0ca387e2dd929dc6b490736532b5d998a025c362
     restart: on-failure
     stop_grace_period: 1m
-    init: true
     user: "1000:1000"
     environment:
       PORT: $APP_LIBREDDIT_PORT
+    healthcheck:
+      disable: true
     networks:
       default:
         ipv4_address: $APP_LIBREDDIT_IP
