--- a/libreddit/umbrel-app.yml
+++ b/libreddit/umbrel-app.yml
@@ -9,14 +9,18 @@ description: >-
   Libreddit hopes to provide an easier way to browse Reddit, without the ads, trackers, and bloat. 
   Browse r/bitcoin without being tracked.
 
-  🚀 Fast: written in Rust for blazing-fast speeds and memory safety
-  ☁️ Light: no JavaScript, no ads, no tracking, no bloat
-  🕵 Private: all requests are proxied through the server, including media
-  🔒 Secure: strong Content Security Policy prevents browser requests to Reddit
+
+  - 🚀 Fast: written in Rust for blazing-fast speeds and memory safety
+  
+  - ☁️ Light: no JavaScript, no ads, no tracking, no bloat
+  
+  - 🕵 Private: all requests are proxied through the server, including media
+  
+  - 🔒 Secure: strong Content Security Policy prevents browser requests to Reddit
 
 developer: Spikecodes
 website: https://spike.codes/
-dependencies:
+dependencies: []
 repo: https://github.com/spikecodes/libreddit
 support: https://matrix.to/#/#libreddit:kde.org
 port: 7420
@@ -25,4 +29,5 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+defaultUsername: ""
 defaultPassword: ""
