--- a/libreddit/umbrel-app.yml
+++ b/libreddit/umbrel-app.yml
@@ -3,7 +3,7 @@ id: libreddit
 category: Social
 name: LibReddit
 version: "0.22.9"
-tagline: Private front-end for Reddit
+tagline: An alternative private front-end to Reddit
 description: >-
   Libreddit is a portmanteau of "libre" (meaning freedom) and "Reddit".
   Libreddit hopes to provide an easier way to browse Reddit, without the ads, trackers, and bloat. 
