--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -21,3 +21,7 @@ gallery:
 path: ""
 defaultUsername: lndg-admin
 deterministicPassword: true
+releaseNotes: >-
+  Address an issue with unknown channels and calculating close fees
+  
+  Fixes an issue in the peer reconnection timer if the connect request results in an error
