--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndg
 category: Lightning Node Management
 name: LNDg
-version: "1.2.1"
+version: "1.3.1"
 tagline: Analyze and automate your Lightning node management
 description: LNDg is your command center for running a profitable and efficient
   routing node. From quickly viewing your node's health, automated rebalancing,
@@ -21,3 +21,7 @@ gallery:
 path: ""
 defaultUsername: lndg-admin
 deterministicPassword: true
+releaseNotes: >-
+  Address an issue with unknown channels and calculating close fees
+  
+  Fixes an issue in the peer reconnection timer if the connect request results in an error
