--- a/suredbits-wallet/docker-compose.yml
+++ b/suredbits-wallet/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}/data/wallet:/home/bitcoin-s/.bitcoin-s
-      - ${APP_DATA_DIR}/data/log:/home/bitcoin-s/.bitcoin-s
+      - ${APP_DATA_DIR}/data/wallet:/bitcoin-s
+      - ${APP_DATA_DIR}/data/log:/log
     environment:
       LOG_PATH: "/log/"
       BITCOIN_S_HOME: "/bitcoin-s"
