Changes for Umbrel

--- a/nitter/data/nitter/nitter.conf
+++ b/nitter/data/nitter/nitter.conf
@@ -1,18 +1,18 @@
 [Server]
-address = "0.0.0.0"
-port = NITTER_PORT
-https = NITTER_HTTPS  # disable to enable cookies when not using https
+address = ""
+port = 8080
+https = false  # disable to enable cookies when not using https
 httpMaxConnections = 10
 staticDir = "./public"
-title = NITTER_NAME
-hostname = NITTER_HOST
+title = "nitter"
+hostname = "nitter.net"
 
 [Cache]
 listMinutes = 240  # how long to cache list info (not the tweets, so keep it high)
 rssMinutes = 10  # how long to cache rss queries
 redisHost = "redis"
-redisPort = REDIS_PORT
-redisPassword = REDIS_PASS
+redisPort = 6379
+redisPassword = "moneyprintergobrrr"
 redisConnections = 20 # connection pool size
 redisMaxConnections = 30
 # max, new connections are opened when none are available, but if the pool size
@@ -35,11 +35,11 @@ tokenCount = 10
 
 # Change default preferences here, see src/prefs_impl.nim for a complete list
 [Preferences]
-theme = NITTER_THEME
-replaceTwitter = REPLACE_TWITTER
-replaceYouTube = REPLACE_YOUTUBE
-replaceReddit = REPLACE_REDDIT
-replaceInstagram = REPLACE_INSTAGRAM
+theme = auto_(twitter).css
+replaceTwitter = "nitter.net"
+replaceYouTube = "piped.kavin.rocks"
+replaceReddit = "teddit.net"
+replaceInstagram = ""
 proxyVideos = true
 hlsPlayback = false
 infiniteScroll = false
