--- a/nitter/umbrel-app.yml
+++ b/nitter/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: nitter
 category: Social
 name: Nitter
-version: "0.22.9"
+version: ""
 tagline: Alternative Twitter front-end
 description: >-
   A free and open source alternative Twitter front-end focused on privacy and performance.
