--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -4,12 +4,14 @@ services:
   app_proxy:
     environment:
       APP_HOST: $APP_INVIDIOUS_IP
-      APP_PORT: $APP_INVIDIOUS_PORT
+      APP_PORT: 3000
 
-  invidious:
+  web:
     image: quay.io/invidious/invidious:latest
     # image: quay.io/invidious/invidious:latest-arm64 # ARM64/AArch64 devices
-    restart: unless-stopped
+    restart: on-failure
+    stop_grace_period: 1m
+    init: true
     ports:
       - "3000:3000"
     environment:
@@ -29,28 +31,25 @@ services:
         # https_only: false
         # statistics_enabled: false
     healthcheck:
-      #test: wget -nv --tries=1 --spider http://127.0.0.1:3000/api/v1/comments/jNQXAC9IVRw || exit 1
-      #interval: 30s
-      #timeout: 5s
-      #retries: 2
       disable: true
     depends_on:
       - invidious-db
 
-  invidious-db:
+  db:
     image: docker.io/library/postgres:14
-    restart: unless-stopped
+    restart: on-failure
+    stop_grace_period: 1m
+    init: true
     volumes:
       - ${APP_DATA_DIR}/data/postgresdata:/var/lib/postgresql/data
       - ${APP_DATA_DIR}/data/config/sql:/config/sql
-      - ${APP_DATA_DIR}/data/config/sql/init-invidious-db.sh:/docker-entrypoint-initdb.d/init-invidious-db.sh
+      - ${APP_DATA_DIR}/data/config/init-invidious-db.sh:/docker-entrypoint-initdb.d/init-invidious-db.sh
     environment:
       POSTGRES_DB: invidious
       POSTGRES_USER: umbrel
       POSTGRES_PASSWORD: moneyprintergobrrr
     healthcheck:
-      #test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       disable: true
 
-volumes:
-  postgresdata:
+
+
