statistics_enabled: true

--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         check_tables: true
         external_port: $APP_INVIDIOUS_PORT
         domain: http://${DEVICE_HOSTNAME}.local
+        statistics_enabled: true
     healthcheck:
       disable: true
     depends_on:
