--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3001
   web:
     image: bitcoinscala/oracle-server-ui:1.9.2-9a14a58e-SNAPSHOT
-    entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/home/bitcoin-s/.bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
+    entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -16,7 +16,7 @@ services:
       - ${APP_DATA_DIR}/data/log:/log
     environment:
       LOG_PATH: "/log/"
-      BITCOIN_S_HOME: "/home/bitcoin-s/.bitcoin-s/"
+      BITCOIN_S_HOME: "/bitcoin-s/"
       ORACLE_SERVER_API_URL: "http://${APP_KRYSTAL_BULL_SERVER_IP}:9998/"
       TOR_PROXY: socks5://${TOR_PROXY_IP}:${TOR_PROXY_PORT}
       DEFAULT_UI_PASSWORD: "none"
@@ -27,14 +27,15 @@ services:
     depends_on: 
       - oracleserver
   oracleserver:
-    image: bitcoinscala/bitcoin-s-oracle-server:1.9.2-184-288918d7-SNAPSHOT
+    image: bitcoinscala/bitcoin-s-oracle-server:1.9.2-198-f65b483d-SNAPSHOT
     user: "1000:1000"
     restart: on-failure
     volumes:
-      - ${APP_DATA_DIR}/data/oracleserver:/home/bitcoin-s/.bitcoin-s
+      - ${APP_DATA_DIR}/data/oracleserver:/bitcoin-s
     environment:
       BITCOIN_S_KEYMANAGER_ENTROPY: $APP_SEED
       BITCOIN_S_ORACLE_RPC_PASSWORD: $APP_PASSWORD
+      DISABLE_JLINK: "1"
     networks:
       default:
         ipv4_address: $APP_KRYSTAL_BULL_SERVER_IP
