--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -7,12 +7,11 @@ services:
       APP_PORT: 3001
   web:
     image: bitcoinscala/oracle-server-ui:1.9.2-9a14a58e-SNAPSHOT
-    entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
     volumes:
-      - ${APP_DATA_DIR}/data/oracleserver:/home/bitcoin-s/.bitcoin-s
+      - ${APP_DATA_DIR}/data/oracleserver:/bitcoin-s
       - ${APP_DATA_DIR}/data/log:/log
     environment:
       LOG_PATH: "/log/"
@@ -28,6 +27,7 @@ services:
       - oracleserver
   oracleserver:
     image: bitcoinscala/bitcoin-s-oracle-server:1.9.2-198-f65b483d-SNAPSHOT
+    entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
     user: "1000:1000"
     restart: on-failure
     volumes:
