--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     image: docker.io/library/postgres:14
     restart: on-failure
     stop_grace_period: 1m
-    user: "1000:1000"
+    #user: "1000:1000"
     init: true
     volumes:
       - ${APP_DATA_DIR}/data/postgresdata:/var/lib/postgresql/data
