--- a/whoogle-search/umbrel-app.yml
+++ b/whoogle-search/umbrel-app.yml
@@ -46,6 +46,13 @@ description: >-
 
   - Optional NoJS mode to view search results in a separate window with JavaScript blocked
 
+
+  *No third party JavaScript. Whoogle can be used with JavaScript disabled, but if enabled, uses JavaScript for things like presenting search suggestions.
+
+  **No third party cookies. Whoogle uses server side cookies (sessions) to store non-sensitive configuration settings such as theme, language, etc. Just like with JavaScript, cookies can be disabled and not affect Whoogle's search functionality.
+
+  ***If deployed to a remote server, or configured to send requests through a VPN, Tor, proxy, etc.
+
 developer: Ben Busby
 website: https://github.com/benbusby
 dependencies: []
