Change category and add additional gallery image

--- a/whoogle-search/umbrel-app.yml
+++ b/whoogle-search/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: whoogle-search
-category: Search
+category: Networking
 name: Whoogle Search
 version: "0.7.4"
 tagline: A self-hosted, ad-free, privacy-respecting metasearch engine
@@ -63,6 +63,7 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+  - 4.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
