Change Woofbot category to Finance

--- a/woofbot/umbrel-app.yml
+++ b/woofbot/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: woofbot
-category: Explorers
+category: Finance
 name: WoofBot
 version: "0.1.0"
 tagline: A chatbot for your personal node
