--- a/passky-client/umbrel-app.yml
+++ b/passky-client/umbrel-app.yml
@@ -3,7 +3,7 @@ id: passky-client
 category: Password Managers
 name: Passky Client
 version: "v7.0.0"
-tagline: Simple, modern, lightweight, open source and secure password manager.
+tagline: Simple, modern, lightweight, open source and secure password manager
 description: >-
   Passky is one of the easiest password manager to use.
   On Passky's main page you can see all your saved passwords,
@@ -28,7 +28,6 @@ gallery:
   - 2.jpg
   - 3.jpg
   - 4.jpg
-  - 5.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
