Update release notes

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "0.15.0-beta-build-2"
+version: "0.15.1-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  Introducing automatic channel backup recovery. You can now recover your Lightning Node seamlessly when setting up a new node, including the funds in your Bitcoin wallet (on-chain), as well as the funds in your Lightning payment channels.
+  The v0.15 release containes an "on the fly" migration that will start to write items in the revocation log in a more efficient manner. This release allows users to reclaim all the old disk space by converting historical records to the new format, with the old records being deleted.
 
 
   Also new:
