--- a/itchysats/umbrel-app.yml
+++ b/itchysats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: itchysats
 category: Finance
 name: ItchySats
-version: "0.5.5"
+version: "0.6.0"
 tagline: Peer-2-peer derivatives on Bitcoin
 description: >-
   ItchySats enables peer-2-peer CFD trading on Bitcoin using DLCs
@@ -42,6 +42,8 @@ description: >-
   
   
   With 0.5.0 you can chose from different from leverage. Leverage choices are configured by the maker and might initially be restricted to x1, x2 and x3.
+  
+  With 0.6.0 you can open positions on BTCUSD and ETHUSD prices. #ShortTheMerge
 developer: ItchySats
 website: https://itchysats.network
 dependencies:
@@ -58,6 +60,5 @@ defaultUsername: itchysats
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  This release fixes a rare but critical bug where the state of the application was not updated correctly resulting in unexpectedly force-closing positions.
-  Furthermore, this release improves connection stability.
-  It is recommended to update to this version to ensure position are not unexpectedly force-closed.
+  This release enables ETHUSD CFDs. You can now trade BTCUSD and ETHUSD using your Bitcoin.
+  With this release support for the legacy network stack is dropped; versions prior to 0.5.4 are not supported anymore and have to upgrade to maintain compatibility.
