Correct app manifest

--- a/nitter/umbrel-app.yml
+++ b/nitter/umbrel-app.yml
@@ -28,7 +28,7 @@ description: >-
 
 developer: Zedeus
 website: https://github.com/zedeus
-dependencies:
+dependencies: []
 repo: https://github.com/zedeus/nitter
 support: https://matrix.to/#/#nitter:matrix.org
 port: 8420
@@ -37,4 +37,5 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+defaultUsername: ""
 defaultPassword: ""
