Pin to version/build 20220830

--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   web:
     # Official Nim image used as base image for nitter doesn't offer Arm variant so using a custom image
     # https://github.com/zedeus/nitter/issues/399#issuecomment-997263495
-    image: quay.io/unixfox/nitter@sha256:87fd0349a3d3479bc6b9718441534d2f6b243d676de4ecf449ba66c3ed3ad345
+    image: quay.io/unixfox/nitter:build-20220830@sha256:d93da20aea7dbcf117e0f15bb309f5fc55729b19693d203c1c9708a2fe001582
     restart: on-failure
     stop_grace_period: 1m
     init: true
