--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,7 +22,7 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  The v0.15.1 release contains an "on the fly" migration that will start to write items in the revocation log in a more efficient manner. This release allows users to reclaim all the old disk space by converting historical records to the new format, with the old records being deleted.
+  The v0.15 release contains an "on the fly" migration that will start to write items in the revocation log in a more efficient manner. This release (v0.15.1) allows users to reclaim all the old disk space by converting historical records to the new format, with the old records being deleted.
 
 
   Also new:
