Fix link in robosats' description

--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -28,7 +28,7 @@ description: >-
 
   - Strong incentives system: attempts of cheating are penalized with the slashing of the Sats in the fidelity bond.
 
-  - Guides and video tutorials available at https://learn.robosats.com/watch.en .
+  - Guides and video tutorials available at https://learn.robosats.com/watch/en
 
 
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
