Add REDIS_HOST to env

--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     # to pleb to figure out how to run non-root
     #user: "1000:1000"
     environment:
+      REDIS_HOST: "${APP_NITTER_REDIS_IP}"
       REDIS_PASS: "moneyprintergobrrr"
       NITTER_THEME: "auto_(twitter).css"
       REPLACE_YOUTUBE: "piped.kevin.rock"
