Update images to 1.9.3

--- a/krystal-bull/docker-compose.yml
+++ b/krystal-bull/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       APP_HOST: $APP_KRYSTAL_BULL_IP
       APP_PORT: 3001
   web:
-    image: bitcoinscala/oracle-server-ui:1.9.2-7fe71420-SNAPSHOT
+    image: bitcoinscala/oracle-server-ui:1.9.3@sha256:b11c4cc48c126e80bae0c63b263add838b315dea56689954e5e771aa9d3ac0fd
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -26,7 +26,7 @@ services:
     depends_on: 
       - oracleserver
   oracleserver:
-    image: bitcoinscala/bitcoin-s-oracle-server:1.9.2-206-dac65ca8-SNAPSHOT
+    image: bitcoinscala/bitcoin-s-oracle-server:1.9.3@sha256:ee3fee0469666b98e29dc753745b29668c640ed16e9abc06e251ff87001822b2
     entrypoint: ["/opt/docker/bin/bitcoin-s-oracle-server", "--datadir", "/bitcoin-s", "--conf", "/opt/docker/docker-application.conf"]   
     user: "1000:1000"
     restart: on-failure
