--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -23,9 +23,12 @@ description: >-
   An official app from Umbrel.
 releaseNotes: >-
   The v0.15 release contains an "on the fly" migration that will start to write items in the revocation log in a more efficient manner. This release (v0.15.1) allows users to reclaim all the old disk space by converting historical records to the new format, with the old records being deleted.
+  
+  This release also adds support for Taproot addresses, defaulting to using them where appropriate.
 
+  Also new (included since v0.15.0-beta-build-2):
 
-  Also new:
+  - Automatic channel recovery
 
   - View your total (on-chain + off-chain) balance
 
