Fix Theme env var

--- a/nitter/docker-compose.yml
+++ b/nitter/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       REDIS_HOST: "${APP_NITTER_REDIS_IP}"
       REDIS_PASS: "moneyprintergobrrr"
-      NITTER_THEME: "auto_(twitter).css"
+      NITTER_THEME: "auto_(twitter)"
     volumes:
       - ${APP_DATA_DIR}/data/nitter:/data
     depends_on:
