--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -33,21 +33,18 @@ services:
         ipv4_address: $APP_INVIDIOUS_IP
 
   postgres:
-    image: docker.io/library/postgres:14@sha256:befb4cdc1d944bd89784b9caa287cf025f0720f9a02436038124163accd177dc
+    image: ceramicwhite/invidious-postgres:v13.7@sha256:c00e3e0d05cfb2c2338c6c4a58eecb132817ae6893f1cceab361e6b3ff92a537
     restart: on-failure
+    # This needs to run as root for migrations to succeed
+    # user: "1000:1000"
     stop_grace_period: 1m
-    #user: "1000:1000"
     init: true
     volumes:
-      - ${APP_DATA_DIR}/data/postgresdata:/var/lib/postgresql/data
-      - ${APP_DATA_DIR}/data/config/sql:/config/sql
-      - ${APP_DATA_DIR}/data/config/init-invidious-db.sh:/docker-entrypoint-initdb.d/init-invidious-db.sh
+      - ${APP_DATA_DIR}/data/db:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: invidious
       POSTGRES_USER: umbrel
       POSTGRES_PASSWORD: moneyprintergobrrr
-    healthcheck:
-      disable: true
     networks:
       default:
         ipv4_address: $APP_INVIDIOUS_DB_IP
