--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: suredbits-wallet
 category: Finance
 name: Suredbits Wallet
-version: "1.9.2-f44ad4a4"
+version: "1.9.3"
 tagline: A universal DLC wallet
 description: >-
   The Suredbits Wallet is your one stop shop for building Discreet
@@ -14,10 +14,8 @@ description: >-
 
   WARNING: This is an Alpha software, don't put too much money in.
 releaseNotes: >-
-  Fixes blockchain parsing bugs with Taproot transactions.
-  Add ability to backup mnemonic seed for wallet.
-  Optimizations around wallet server startup.
-
+  Websocket events for fee rate changes, rescans, blockchain sync
+  Optimizations for the DLC wallet
 developer: Suredbits
 website: https://suredbits.com
 dependencies:
