--- a/invidious/umbrel-app.yml
+++ b/invidious/umbrel-app.yml
@@ -26,7 +26,12 @@ description: >-
    - Import watch history from NewPipe
    - Export subscriptions to NewPipe and Freetube
    - Import/Export Invidious user data
-   - Technical features
+  
+  Technical features
+   - Embedded video support
+   - Developer API
+   - Does not use official YouTube APIs
+   - No Contributor License Agreement (CLA)
 
 developer: IV-Org
 website: https://invidious.io/
