Remove domain otherwise login will fail for users accessing via IP. Use DB IP.

--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -18,11 +18,10 @@ services:
           dbname: invidious
           user: umbrel
           password: moneyprintergobrrr
-          host: postgres
+          host: $APP_INVIDIOUS_DB_IP
           port: 5432
         check_tables: true
         external_port: $APP_INVIDIOUS_PORT
-        domain: http://${DEVICE_HOSTNAME}.local
         statistics_enabled: true
     healthcheck:
       disable: true
