Run postgres as user 1000

--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -34,8 +34,7 @@ services:
   postgres:
     image: ceramicwhite/invidious-postgres:v13.7@sha256:c00e3e0d05cfb2c2338c6c4a58eecb132817ae6893f1cceab361e6b3ff92a537
     restart: on-failure
-    # This needs to run as root for migrations to succeed
-    # user: "1000:1000"
+    user: "1000:1000"
     stop_grace_period: 1m
     init: true
     volumes:
