Fix formatting of releaseNotes

--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -13,8 +13,9 @@ description: >-
 
 
   WARNING: This is an Alpha software, don't put too much money in.
-releaseNotes: >-
+releaseNotes: >
   Websocket events for fee rate changes, rescans, blockchain sync
+  
   Optimizations for the DLC wallet
 developer: Suredbits
 website: https://suredbits.com
