--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: samourai-server
 category: Wallet Servers
 name: Samourai Server
-version: "1.16.1"
+version: "1.16.1-hotfix-1"
 tagline: Your private backing server for Samourai Wallet
 description: >-
   Samourai Server is an exclusive Umbrel app that runs Samourai Dojo
