Update Samourai Server release notes

--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -32,4 +32,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Minor release including several bugfixes.
+  Change web UI port from 3005 to 3021
