Use latest build

--- a/invidious/docker-compose.yml
+++ b/invidious/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3000
 
   web:
-    image: ceramicwhite/invidious:0.20.1@sha256:03428897ccbb999a3049085e0edeb3f82b71998871db0dd290a407d02e2d98cd
+    image: ceramicwhite/invidious:build-53fb6ad@sha256:f4527d65cfcc6e6395c73d3f0c398aecf6c77c95c032f8e7d97d08349cc44385
     restart: on-failure
     stop_grace_period: 1m
     user: "1000:1000"
